--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,17 +1,18 @@
-{% extends 'base.html' %}
+{% extends 'layout.html' %}
+
+{% block flash %}
+
+{% endblock flash %}
 
 {% block content %}
-{{ super() }}
-
-<div class="container">
-    <main class="px-3">
-        <h2>Клиентам мы помогаем получить скидку на посещение компании. А компании мы помогаем получить нового клиента.</h2>
-        <p class="lead"> Для клиента </p>
-          <a href="/find" class="btn btn-success">Попробовать</a>
-        <p class="lead"> Для компании </p>
-          <a href="/find" class="btn btn-success">Попробовать</a>
-        </p>
-    </main>
+<div class="container text-center">
+    <div class="row">
+        <h3 class="text-primary">Hello from Referral Service</h3>
+    </div>
+</div>
+<div class="row">
+    <div class="col-12 text-center mt-2"><h3>Андрюха, давай</h3></div>
 </div>
 
-{% endblock %}
+
+{% endblock content %}
