--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,10 +1,10 @@
- {% extends 'base.html' %}
+ {% extends 'layout.html' %}
+{% block flash %}
 
+{% endblock flash %}
 {% block content %}
 {{ super() }}
-{% for cat, msg in get_flashed_messages(True) %}
-<div class="flash {{cat}}">{{msg}}</div>
-{% endfor %}
+
 	<td class="profile-panel">
 		<ul class="profile-info">
 		<li>Имя: {{ current_user.login }}</li>
