--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -2,20 +2,17 @@
 {% from 'bootstrap5/form.html' import render_form %}
 
 {% block content %}
-
 <div class="h-100">
     <div class="row d-flex justify-content-center">
         <div class="col-6">
             <div class="row">
                 <div class="col-12  mb-5">
-                    <h3 class="text-primary">Авторизация</h3>
+                    <h3 class="text-primary">Новый пароль</h3>
                 </div>
             </div>
             {{ render_form(form, horizontal_columns=('lg', 2, 100), button_style='btn btn-outline-primary', button_size='md') }}
-            <small class="text-muted ml-2">
-                <a href="{{ url_for('auth.reset_password_request') }}">Забыли пароль?</a>
-          </small>
+
         </div>
     </div>
 </div>
-{% endblock content %}
+{% endblock %}
