--- a/app/templates/auth/unconfirmed.html
+++ b/app/templates/auth/unconfirmed.html
@@ -10,8 +10,8 @@
                     <h3 class="text-primary">Подтвердите вашу почту</h3>
                 </div>
             </div>
-            <p>У Вас не подтвержденный аккаунт. Пожалуйста, проверьте Вашу почту (и папку спам). Вам было отправлено письмо с подтверждением аккаунта.</p>
-            <p>Не получили письмо? <a href="#">Отправить</a>.</p>
+            <p>У Вас не подтвержденный аккаунт. Пожалуйста, проверьте Вашу почту (и папку спам). Вам было отправлено письмо с инструкцией для подтверждением аккаунта.</p>
+            <p>Не получили письмо? <a href="{{ url_for('auth.resend_confirmation') }}">Отправить</a>.</p>
         </div>
     </div>
 </div>
